Decrease font size to avoid overlapping

--- a/frontend/css/nfsen-ng.css
+++ b/frontend/css/nfsen-ng.css
@@ -32,7 +32,7 @@ code, pre, .code {
 }
 
 #flowDiv .dygraph-ylabel {
-    font-size: 1.5rem;
+    font-size: 1rem;
 }
 
 #legend span {
